# image-star

./: .gitignore  README.md  Taskfile.yml  bootstrap.sh  check_scoring.py  docker-compose.dev.yml  docker-compose.observability-server.yml  docker-compose.observability.yml  docker-compose.trainer-server.yml  docker-compose.yml  pyproject.toml  test_tournament_analytics.py
.dev/: example.http  install-trainer-service.sh  move_docker_to_ephemeral.sh  trainer.service  vali.sql
.devcontainer/: devcontainer.json
auditing/: audit.py  audit_no_hotkey.py
config/: grafana-dashboards.yaml  grafana-datasource.yaml  grafana-tournament.json  grafana-training-dashboard.json  grafana-training-dashboards.yaml  grafana-training-datasource.yaml  grafana-validator-errors.json  grafana-validator-general.json  loki-config.yaml  loki-training-config.yaml  otel-config.yaml  prometheus-config.yaml  prometheus-training-config.yaml  tempo-config.yaml
config/nginx/: nginx.conf
config/vector/: vector.toml
core/: create_config.py
core/config/: base_diffusion_flux.toml  base_diffusion_qwen_image.yaml  base_diffusion_zimage.yaml  config_handler.py
core/models/: config_models.py  payload_models.py  tournament_models.py  utility_models.py
dockerfiles/: cache-cleanup.dockerfile  diffusion-synth.dockerfile  hf-uploader.dockerfile  miner-diffusion.dockerfile  miner.dockerfile  standalone-image-toolkit-trainer.dockerfile  standalone-image-trainer.dockerfile  standalone-text-trainer.dockerfile  trainer-downloader.dockerfile  validator-diffusion.dockerfile  validator.dockerfile
docs/: compute.md  dev.md  diffusion_advice.md  grpo_rewards_code_execution.md  miner_advice.md  miner_setup.md  observability.md  s3_setup.md  scoring_system.md  tourn_miner.md  tournament_overview.md  trainer-logs-setup.md  validator_setup.md
docs/auditing/: auditing.md  auditing_setup.md
examples/: run_dpo_task.sh  run_grpo_task.sh  run_image_task.sh  run_instruct_task.sh
miner/: config.py  dependencies.py  server.py  utils.py
miner/logic/: job_handler.py  (+1 more)
scripts/: add_affine_reward_functions.py  image_trainer.py  manual_grpo_eval.py  run_text_trainer.sh  test-trainer-logs.sh  text_trainer.py  upload_grpo_model.sh
tests/: check_scoring.py  debug_weight_calculation.py  test_boss_round_historical_simple.py  test_boss_round_sync.py  test_hybrid_decay_system.py  test_model_instruct_eval.py  test_separated_burn_dynamics.py  test_tournament_analytics.py  test_tournament_scoring.py  test_tournament_stake_requirements.py  test_tournament_zero_scores.py
trainer/: constants.py  image_manager.py
utils/: autoupdate_auditor_steps.sh  autoupdate_validator_steps.sh  run_auditor_autoupdate.py  run_evaluation.py  run_validator_auto_update.py  setup_grafana.sh  start_validator.sh
validator/: asgi.py  prompts.yml  requirements.txt  test_axolotl.yml
(+166 files in other folders)
